# sam-dm

./: .gitignore  README.md
.github/workflows/: release.yml
dm-client/: .env.example  Cargo.toml  install.sh
dm-client/src/: api.rs  config.rs  main.rs  polling.rs  updater.rs  usb.rs
dm-console/: astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
dm-console/src/components/: Sidebar.astro
dm-console/src/layouts/: Layout.astro
dm-console/src/pages/: clients.astro  index.astro  install.astro  schedules.astro  versions.astro
dm-console/src/styles/: global.css
dm-server/: .env.example  Cargo.toml  start.sh
dm-server/migrations/: 001_initial.sql  002_client_config.sql
dm-server/src/: config.rs  main.rs
dm-server/src/api/: artifacts.rs  clients.rs  mod.rs  polling.rs  versions.rs
dm-server/src/db/: mod.rs  models.rs
test/artifacts-src/v1.0.0/: index.js  package.json
test/backups/backup_1.0.0_20260128_201205/: ._v1.0.0
test/service/v1.0.1/: index.js  package.json
