[package]
name = "dm-client"
version = "0.1.0"
edition = "2021"
description = "OMA DM Client for automatic service updates"
authors = ["Paul Yu <yhc007>"]

[dependencies]
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
semver = { version = "1", features = ["serde"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# Config & logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File operations
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
tempfile = "3"
