[package]
name = "dm-server"
version = "0.1.0"
edition = "2021"
description = "OMA DM Server for remote service updates"
authors = ["Paul Yu <yhc007>"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-rustls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
thiserror = "1"
anyhow = "1"

# Config & logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# API key generation
rand = "0.8"
base64 = "0.21"

# File streaming & hashing
tokio-util = { version = "0.7", features = ["io"] }
sha2 = "0.10"
